# sky_mission

./: .communication.py.swo  .communication.py.swp  .gitmodules  CMakeLists.txt  Ler.py  README.md  SUMMARY.md  communication.py  dia2.py  final_drop.py  final_read+drop.py  mav.parm  mav.py  mav.tlog  mav.tlog.raw  package.xml  record.py  square.cpp  stage_1.py  teste_base.py  teste_eixo.py  teste_eletroima.py  teste_magnet+qrREAD.py  teste_magnet.py  teste_mav.py  teste_qrREAD.py  teste_quadrado.py  teste_takeoff.py
deliverables/: create_csv.py  format_csv.py  import csv.py  mission1.csv
dia2/: centralize.py  dia2.py  dia2_onlyPLND.py  dia2_processing.py  package-test.py  people.py  test_detect.py
dia3/: dia3.py  dia3_radio.py
dia4/: dia4.py
drone-tests/: go_to_local.py
drop-zone/: actuator.py  block-stacking-aruco.py  block-stacking-drone.py  block-stacking.py
fase1/: fase1.plan
fase2/: README.md  testecam.py  testecam_print.py
fase2/square_detection/: CMakeLists.txt  README.md  package.xml
fase2/square_detection/src/: blue_square_detection_node.cpp
fase4/: centralization.py  fase4_ros.py  flitering_json.py  people_detection.py  people_detector_yolo.py  test_new_message.py
fase5/: README.md  fase5.py
fase_4/: centralize.cpp
final/: f1.py  mav.parm  mav.py  serv_test.py  teste.py  testef1-alto.py  testef1-baixo.py
full-mission/: actuator.py  go_to_local.py  mainDrone.py  mainSim.py
geofence/: README.md  geofence.lua  geofence_imav.lua
launch/: mission.launch  mission_sim.launch
line-follower/: .line-follower-drone.py.swp  line-follower-drone.py  line-follower.md  line-follower.py
lua_scripts/: README.md  SillySongs.lua  battery.lua  log.lua  (+3 more)
(+78 files in other folders)
